k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phoenix-deployment
  labels:
    app: phoenix-app

# launch 2 replicas of the application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: phoenix-app
  template:
    metadata:
      labels:
        app: phoenix-app
    spec:
      containers:
      - name: phoenix-app
        image: 095055159123.dkr.ecr.ap-south-1.amazonaws.com/phoenix-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000 
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
